--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <nav class="nav">
-    <div class="navbar">
+</header>
+<div class="logo">
+<img src="logoh.png" alt="Logo">
+</div>
+<div class="navbar">
         <div class="background">
             
         </div>
@@ -26,7 +30,6 @@
         <button class="sml">Search</button>
     </div>
 </nav>
-
     
 </body>
 </html>
